# PaymentServer

./: PaymentServer.cabal  PaymentServer.nix  README.md  README.rst  charge_succeeded.json  default.nix  paymentserver.nix  ristretto.nix  shell.nix  stack-shell.nix  stack.yaml
.circleci/: config.yml  lib.sh
apidocs/: Main.hs
app/: Main.hs
complete-payment/: Main.hs
generate-key/: Main.hs
get-public-key/: Main.hs
materialized.paymentserver/: .stack-to-nix.cache.0  PaymentServer.nix
misc/: insert-vouchers.py  load-test.py
misc/examples/events/: charge.http  webhook.http
nix/: PaymentServer.nix  README  challenge-bypass-ristretto-repo.nix  challenge-bypass-ristretto.nix  default.nix  hspec-core.nix  hspec-discover.nix  hspec.nix  nix.conf  overlay.nix  pkgs.nix  servant-prometheus.nix  sources.json  stripe-core.nix  stripe-haskell.nix  stripe-http-client.nix  stripe-tests.nix
nix/materialized.paymentserver/: .stack-to-nix.cache  .stack-to-nix.cache.0  .stack-to-nix.cache.1  PaymentServer.nix  README  default.nix
oldnix/: README  challenge-bypass-ristretto.nix  pkgs.nix  servant-prometheus.nix
pay-for-voucher/: Main.hs
src/: Lib.hs
src/PaymentServer/: Issuer.hs  Main.hs  Metrics.hs  Persistence.hs  Redemption.hs  Ristretto.hs  Server.hs
src/PaymentServer/Processors/: Stripe.hs
test/: Driver.hs  FakeStripe.hs  Metrics.hs  Persistence.hs  Redemption.hs  Ristretto.hs  Spec.hs  SpecPersistence.hs  SpecRedemption.hs  SpecStripe.hs  SpecStuff.hs  Stripe.hs
test/Util/: Gen.hs  JSON.hs  Spec.hs  WAI.hs
