name:                PaymentServer
version:             0.1.1.0
synopsis:            Coordinate entities for the purchase of PrivateStorage.io vouchers.
homepage:            https://github.com/privatestorageio/PaymentServer#readme
license:             Apache-2.0
author:              Jean-Paul Calderone
maintainer:          support@privatestorage.io
copyright:           2019 Private Storage.io, LLC.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PaymentServer.Ristretto
  build-depends:       base >= 4.7 && < 5
                     , utf8-string
                     , text
  default-language:    Haskell2010
  ghc-options:       -Wmissing-import-lists -Wunused-imports
  pkgconfig-depends: libchallenge_bypass_ristretto_ffi

source-repository head
  type:     git
  location: https://github.com/privatestorageio/PaymentServer
