name:                PaymentServer
version:             0.1.1.1
synopsis:            Coordinate entities for the purchase of PrivateStorage.io vouchers.
-- description:
homepage:            https://github.com/privatestorageio/PaymentServer#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Jean-Paul Calderone
maintainer:          support@privatestorage.io
copyright:           2019 Private Storage.io, LLC.
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PaymentServer.Processors.Stripe
                     , PaymentServer.Ristretto
                     , PaymentServer.Issuer
                     , PaymentServer.Persistence
                     , PaymentServer.Redemption
                     , PaymentServer.Metrics
                     , PaymentServer.Server
                     , PaymentServer.Main
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , utf8-string
                     , base16-bytestring
                     , servant
                     , servant-server
                     , http-types
                     , http-media
                     , wai
                     , wai-extra
                     , wai-cors
                     , data-default
                     , warp
                     , warp-tls
                     , stripe-concepts
                     , stripe-haskell
                     , stripe-core
                     , stripe-signature
                     , text
                     , containers
                     , cryptonite
                     , sqlite-simple
                     , retry
                     , prometheus-client
                     , servant-prometheus
                     , mtl
  default-language:    Haskell2010
  ghc-options:        -Werror -Wall -Wno-name-shadowing -Wno-orphans -Wno-error=unused-do-bind
  pkgconfig-depends: libchallenge_bypass_ristretto_ffi

executable PaymentServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PaymentServer
  default-language:    Haskell2010

executable PaymentServer-generate-key
  hs-source-dirs:      generate-key
  main-is:             Main.hs
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , PaymentServer
  default-language:    Haskell2010

executable PaymentServer-get-public-key
  hs-source-dirs:      get-public-key
  main-is:             Main.hs
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , optparse-applicative
                     , PaymentServer
  default-language:    Haskell2010

executable PaymentServer-complete-payment
  hs-source-dirs:      complete-payment
  main-is:             Main.hs
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , text
                     , bytestring
                     , optparse-applicative
                     , unix-compat
                     , http-client
                     , stripe-concepts
                     , raw-strings-qq
                     , PaymentServer
  default-language:    Haskell2010

test-suite PaymentServer-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Persistence
                     , Redemption
                     , Metrics
                     , Stripe
                     , FakeStripe
                     , Ristretto
  build-depends:       aeson
                     , base
                     , bytestring
                     , stripe-signature
                     , stripe-concepts
                     , text
                     , transformers
                     , raw-strings-qq
                     , time
                     , tasty
                     , tasty-hunit
                     , directory
                     , async
                     , sqlite-simple
                     , http-types
                     , wai
                     , wai-extra
                     , warp
                     , http-types
                     , servant-server
                     , prometheus-client
                     , stripe-core
                     , PaymentServer
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/privatestorageio/PaymentServer
